fix: fix overlapping header on the cross icon (#1583)
* fix: fix overlapping header on the cross icon

--- a/components/o3-tooltip/main.css
+++ b/components/o3-tooltip/main.css
@@ -42,11 +42,16 @@ o3-tooltip-onboarding[no-title] .o3-tooltip-content {
 	margin-right: var(--icon-button-size);
 }
 
+o3-tooltip-onboarding[no-title]  .o3-tooltip-content-title, o3-tooltip-toggle[no-title]  .o3-tooltip-content-title {
+	display: none;
+}
+
 .o3-tooltip-content-title {
 	font-weight: var(--o3-font-weight-semibold);
 	font-size: var(--o3-font-size-0);
 	color: inherit;
 	margin-bottom: var(--o3-spacing-4xs);
+	padding-right: calc(var(--padding-right) + var(--o3-spacing-5xs)); /* add extra 4px padding to create space between close button and heading title */
 }
 
 /* ARROW STYLES */
